--- a/static/index.html
+++ b/static/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Node on Azure</title>
+<title>Kyle Moses Resume</title>
+<link rel="stylesheet" href="index.css">
 </head>
 <body>
 <h1>Node.js and Express Hosted on Microsoft Azure Template</h1>
-<p>This repository serves as a template that can be used to create a Node.js and Express based website that can easily
-be hosted on Microsoft Azure.</p>
-
+<p></p>
+<a href="fetching-from-server.html">www.linkedin.com/in/thekylemoses</a>
 Additional application functionality includes:<br />
 <a href="fetching-from-server.html">Accessing Node.js Server-Side Application Programming Interfaces (APIs)</a><br />
 <a href="fetching-remote-dog-breeds.html">Accessing Remote Application Programming Interfaces (APIs)</a>
