--- a/static/index.html
+++ b/static/index.html
@@ -5,11 +5,10 @@
 <link rel="stylesheet" href="index.css">
 </head>
 <body>
-<h1>Node.js and Express Hosted on Microsoft Azure Template</h1>
-<p></p>
+<h1>Kyle Moses</h1>
 <a href="fetching-from-server.html">www.linkedin.com/in/thekylemoses</a>
-Additional application functionality includes:<br />
-<a href="fetching-from-server.html">Accessing Node.js Server-Side Application Programming Interfaces (APIs)</a><br />
-<a href="fetching-remote-dog-breeds.html">Accessing Remote Application Programming Interfaces (APIs)</a>
+<p>779.875.3797</p>
+<a href="mailto:kylemoses23@gmail.com">kylemoses23@gmail.com</a>
+<p>Lockport, IL</p>
 </body>
 </html>
