--- a/static/index.html
+++ b/static/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <h1>Kyle Moses</h1>
-<a href="fetching-from-server.html">www.linkedin.com/in/thekylemoses</a>
-<p>779.875.3797</p>
+<p><a href="fetching-from-server.html">www.linkedin.com/in/thekylemoses</a>
+779.875.3797
 <a href="mailto:kylemoses23@gmail.com">kylemoses23@gmail.com</a>
-<p>Lockport, IL</p>
+Lockport, IL</p>
 </body>
 </html>
