--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Kyle Moses</h1>
-<s>
+<section>
 <p><a href="fetching-from-server.html">www.linkedin.com/in/thekylemoses</a> 
 &#25CF
 779.875.3797 
@@ -14,6 +14,6 @@
 <a href="mailto:kylemoses23@gmail.com">kylemoses23@gmail.com</a> 
 &#25CF
 Lockport, IL</p>
-</s>
+</section>
 </body>
 </html>
