--- a/static/index.html
+++ b/static/index.html
@@ -6,14 +6,23 @@
 </head>
 <body>
 <h1>Kyle Moses</h1>
+
 <section>
-<p><a href="fetching-from-server.html">www.linkedin.com/in/thekylemoses</a> 
-&#9679 
-779.875.3797 
-&#9679 
-<a href="mailto:kylemoses23@gmail.com">kylemoses23@gmail.com</a> 
-&#9679 
-Lockport, IL</p>
+    <p><a href="fetching-from-server.html">www.linkedin.com/in/thekylemoses</a> 
+    &#9679 
+    779.875.3797 
+    &#9679 
+    <a href="mailto:kylemoses23@gmail.com">kylemoses23@gmail.com</a> 
+    &#9679 
+    Lockport, IL</p>
+</section>
+
+<h2>HIGHLIGHTS OF QUALIFICATIONS</h2>
+<section>
+    <h3>CERTIFICATIONS</h3>
+    <ul>
+        None Yet
+    </ul>
 </section>
 </body>
 </html>
