--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Kyle Moses</h1>
 
-<section>
+<section id="secthead">
     <p><a href="fetching-from-server.html">www.linkedin.com/in/thekylemoses</a> 
     &#9679 
     779.875.3797 
@@ -23,6 +23,8 @@
     <ul>
         None Yet
     </ul>
+
+    <h3>CERTIFICATIONS</h3>
 </section>
 </body>
 </html>
