--- a/static/index.html
+++ b/static/index.html
@@ -19,9 +19,17 @@
 
 <h2>HIGHLIGHTS OF QUALIFICATIONS</h2>
 <section>
+    <ul>
+        - Leadership skills obtained from being captain of the Varsity Water Polo team in High School
+        - Management and Customer Service skills obtained from four years as a Fast Food Manager
+    </ul>
+</section>
+
+<h2>SUMMARY OF TECHNICAL QUALIFICATIONS</h2>
+<section>
     <h3>CERTIFICATIONS</h3>
     <ul>
-        None Yet
+        - None Yet
     </ul>
 
     <h3>CERTIFICATIONS</h3>
