--- a/static/index.html
+++ b/static/index.html
@@ -16,6 +16,7 @@
     &#9679 
     Lockport, IL</p>
 </section>
+<br>
 
 <h2>HIGHLIGHTS OF QUALIFICATIONS</h2>
 <section>
@@ -27,12 +28,17 @@
 
 <h2>SUMMARY OF TECHNICAL QUALIFICATIONS</h2>
 <section>
-    <h3>CERTIFICATIONS</h3>
+    <h3>CERTIFICATIONS:</h3>
     <ul>
         - None Yet
     </ul>
 
-    <h3>CERTIFICATIONS</h3>
+    <h3>OPERATING SYSTEMS</h3>
+    <h3>NETWORKING</h3>
+    <h3>LANGUAGES</h3>
+    <h3>WEB</h3>
+    <h3>APPLICATIONS</h3>
+    <h3>HARDWARE/SYSTEMS</h3>
 </section>
 </body>
 </html>
