--- a/static/index.html
+++ b/static/index.html
@@ -21,8 +21,8 @@
 <h2>HIGHLIGHTS OF QUALIFICATIONS</h2>
 <section>
     <ul>
-        - Leadership skills obtained from being captain of the Varsity Water Polo team in High School
-        - Management and Customer Service skills obtained from four years as a Fast Food Manager
+        <li>Leadership skills obtained from being captain of the Varsity Water Polo team in High School</li>
+        <li>Management and Customer Service skills obtained from four years as a Fast Food Manager</li>
     </ul>
 </section>
 
@@ -30,7 +30,7 @@
 <section>
     <h3>CERTIFICATIONS:</h3>
     <ul>
-        - None Yet
+    <li>None Yet</li>
     </ul>
 
     <h3>OPERATING SYSTEMS</h3>
