--- a/static/index.html
+++ b/static/index.html
@@ -33,8 +33,10 @@
     <ul>
     <li>None Yet</li>
     </ul>
-
     <h3>OPERATING SYSTEMS</h3>
+    <ul>
+        <li>    None Yet</li>
+        </ul>
     <h3>NETWORKING</h3>
     <h3>LANGUAGES</h3>
     <h3>WEB</h3>
