--- a/static/index.html
+++ b/static/index.html
@@ -3,6 +3,14 @@
 <head>
 <title>Kyle Moses Resume</title>
 <link rel="stylesheet" href="index.css">
+<style>
+    div {
+  padding-top: 50px;
+  padding-right: 30px;
+  padding-bottom: 50px;
+  padding-left: 80px;
+}
+</style>
 </head>
 <body>
 <h1>Kyle Moses</h1>
