--- a/static/index.html
+++ b/static/index.html
@@ -3,19 +3,11 @@
 <head>
 <title>Kyle Moses Resume</title>
 <link rel="stylesheet" href="index.css">
-<style>
-    div {
-  padding-top: 50px;
-  padding-right: 30px;
-  padding-bottom: 50px;
-  padding-left: 80px;
-}
-</style>
 </head>
 <body>
 <h1>Kyle Moses</h1>
 
-<section id="secthead">
+<div id="divHead">
     <p><a href="fetching-from-server.html">www.linkedin.com/in/thekylemoses</a> 
     &#9679 
     779.875.3797 
@@ -23,34 +15,34 @@
     <a href="mailto:kylemoses23@gmail.com">kylemoses23@gmail.com</a> 
     &#9679 
     Lockport, IL</p>
-</section>
+    </div>
 </br >
 
 <h2>HIGHLIGHTS OF QUALIFICATIONS</h2>
-<section>
+<div>
     <ul>
         <li>Leadership skills obtained from being captain of the Varsity Water Polo team in High School</li>
         <li>Management and Customer Service skills obtained from four years as a Fast Food Manager</li>
     </ul>
-</section>
+</div>
 </br >
 
 <h2>SUMMARY OF TECHNICAL QUALIFICATIONS</h2>
-<section>
+<div>
     <h3>CERTIFICATIONS:</h3>
     <ul>
     <li>None Yet</li>
     </ul>
     <h3>OPERATING SYSTEMS</h3>
     <ul>
-        <li>    None Yet</li>
+        <li>None Yet</li>
         </ul>
     <h3>NETWORKING</h3>
     <h3>LANGUAGES</h3>
     <h3>WEB</h3>
     <h3>APPLICATIONS</h3>
     <h3>HARDWARE/SYSTEMS</h3>
-</section>
+    </div>
 </br >
 
 </body>
