--- a/static/index.html
+++ b/static/index.html
@@ -19,7 +19,7 @@
 </br >
 
 <h2>HIGHLIGHTS OF QUALIFICATIONS</h2>
-<div>
+<div id="divBody">
     <ul>
         <li>Leadership skills obtained from being captain of the Varsity Water Polo team in High School</li>
         <li>Management and Customer Service skills obtained from four years as a Fast Food Manager</li>
@@ -28,7 +28,7 @@
 </br >
 
 <h2>SUMMARY OF TECHNICAL QUALIFICATIONS</h2>
-<div>
+<div id="divBody">
     <h3>CERTIFICATIONS:</h3>
     <ul>
     <li>None Yet</li>
