--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Kyle Moses</h1>
 
-<div id="divHead">
+<div id="headDiv">
     <p><a href="fetching-from-server.html">www.linkedin.com/in/thekylemoses</a> 
     &#9679 
     779.875.3797 
@@ -19,7 +19,7 @@
 </br >
 
 <h2>HIGHLIGHTS OF QUALIFICATIONS</h2>
-<div id="divBody">
+<div id="bodyDiv">
     <ul>
         <li>Leadership skills obtained from being captain of the Varsity Water Polo team in High School</li>
         <li>Management and Customer Service skills obtained from four years as a Fast Food Manager</li>
@@ -28,7 +28,7 @@
 </br >
 
 <h2>SUMMARY OF TECHNICAL QUALIFICATIONS</h2>
-<div id="divBody">
+<div id="bodyDiv">
     <h3>CERTIFICATIONS:</h3>
     <ul>
     <li>None Yet</li>
