--- a/static/index.html
+++ b/static/index.html
@@ -35,11 +35,14 @@
     </ul>
     <h3>OPERATING SYSTEMS</h3>
     <ul>
-        <li>None Yet</li>
+        <li>Windows, iOS, Android, ChromeOS, VMWare</li>
         </ul>
     <h3>NETWORKING</h3>
+    <ul><li>LAN, Cisco Networking Academy</li></ul>
     <h3>LANGUAGES</h3>
+    <ul><li>C, C#, Java, Python, Android Development, JavaScript</li></ul>
     <h3>WEB</h3>
+    <ul><li>C, C#, Java, Python, Android Development, JavaScript</li></ul>
     <h3>APPLICATIONS</h3>
     <h3>HARDWARE/SYSTEMS</h3>
     </div>
