--- a/static/index.html
+++ b/static/index.html
@@ -19,7 +19,7 @@
 </br >
 
 <h2>HIGHLIGHTS OF QUALIFICATIONS</h2>
-<div id="bodyDiv">
+<div class="bodyDiv">
     <ul>
         <li>Leadership skills obtained from being captain of the Varsity Water Polo team in High School</li>
         <li>Management and Customer Service skills obtained from four years as a Fast Food Manager</li>
@@ -28,7 +28,7 @@
 </br >
 
 <h2>SUMMARY OF TECHNICAL QUALIFICATIONS</h2>
-<div id="bodyDiv">
+<div class="bodyDiv">
     <h3>CERTIFICATIONS:</h3>
     <ul>
     <li>None Yet</li>
@@ -42,10 +42,15 @@
     <h3>LANGUAGES</h3>
     <ul><li>C, C#, Java, Python, Android Development, JavaScript</li></ul>
     <h3>WEB</h3>
-    <ul><li>C, C#, Java, Python, Android Development, JavaScript</li></ul>
+    <ul><li>HTML, CSS, WordPress, Weebly, Node.JS</li></ul>
     <h3>APPLICATIONS</h3>
     <h3>HARDWARE/SYSTEMS</h3>
     </div>
+</br >
+<h2>SUMMARY OF TECHNICAL QUALIFICATIONS</h2>
+<div class="bodyDiv">
+
+</div>
 </br >
 
 </body>
