--- a/static/index.html
+++ b/static/index.html
@@ -1,3 +1,15 @@
+<!--
+
+ Author: Kyle Moses
+
+ Class:  Software Engineering
+
+ Project: Lab 2 / Course Syllabus
+
+ Description: This is the first version of my Course Syllabus application and is being submitted as part of Lab 2.
+
+-->
+
 <!DOCTYPE html>
 <html>
 <head>
