--- a/static/index.html
+++ b/static/index.html
@@ -28,7 +28,6 @@
     &#9679 
     Lockport, IL</p>
     </div>
-</br >
 
 <h2>HIGHLIGHTS OF QUALIFICATIONS</h2>
 <div class="bodyDiv">
@@ -37,7 +36,6 @@
         <li>Management and Customer Service skills obtained from four years as a Fast Food Manager</li>
     </ul>
 </div>
-</br >
 
 <h2>SUMMARY OF TECHNICAL QUALIFICATIONS</h2>
 <div class="bodyDiv">
@@ -58,10 +56,15 @@
     <h3>APPLICATIONS</h3>
     <h3>HARDWARE/SYSTEMS</h3>
     </div>
-</br >
-<h2>SUMMARY OF TECHNICAL QUALIFICATIONS</h2>
-<div class="bodyDiv">
 
+<h2>EDUCATION</h2>
+<div class="bodyDiv">
+    <p><strong>Bachelor of Science in Computer Science</strong>Bachelor</p>
+    <p>Lewis University, Romeoville, IL</p>
+    <p>Minor: Graphic Design</p>
+</br >
+    <p>Expected: May 2023</p>
+    <p>GPA: 2.2/4.0</p>
 </div>
 </br >
 
