--- a/static/index.html
+++ b/static/index.html
@@ -54,7 +54,9 @@
     <h3>WEB</h3>
     <ul><li>HTML, CSS, WordPress, Weebly, Node.JS</li></ul>
     <h3>APPLICATIONS</h3>
+    <ul><li>Microsoft Office, Photoshop, Wireshark, FTK, Google Docs, Orange, VisualStudio</li></ul>
     <h3>HARDWARE/SYSTEMS</h3>
+    <ul><li>PC</li></ul>
     </div>
 
 <h2>EDUCATION</h2>
