--- a/static/index.html
+++ b/static/index.html
@@ -19,7 +19,7 @@
 <body>
 <h1>Kyle Moses</h1>
 
-<div id="headDiv">
+<section>
     <p><a href="fetching-from-server.html">www.linkedin.com/in/thekylemoses</a> 
     &#9679 
     779.875.3797 
@@ -27,7 +27,7 @@
     <a href="mailto:kylemoses23@gmail.com">kylemoses23@gmail.com</a> 
     &#9679 
     Lockport, IL</p>
-    </div>
+    </section>
 
 <h2>HIGHLIGHTS OF QUALIFICATIONS</h2>
 <div class="bodyDiv">
