--- a/static/index.html
+++ b/static/index.html
@@ -27,7 +27,7 @@
     <a href="mailto:kylemoses23@gmail.com">kylemoses23@gmail.com</a> 
     &#9679 
     Lockport, IL</p>
-    </section>
+</section>
 
 <h2>HIGHLIGHTS OF QUALIFICATIONS</h2>
 <div class="bodyDiv">
@@ -57,14 +57,13 @@
     <ul><li>Microsoft Office, Photoshop, Wireshark, FTK, Google Docs, Orange, VisualStudio</li></ul>
     <h3>HARDWARE/SYSTEMS</h3>
     <ul><li>PC</li></ul>
-    </div>
+</div>
 
 <h2>EDUCATION</h2>
 <div class="bodyDiv">
-    <p><strong>Bachelor of Science in Computer Science</strong>Bachelor</p>
+    <p><strong>Bachelor of Science in Computer Science</strong></p>
     <p>Lewis University, Romeoville, IL</p>
     <p>Minor: Graphic Design</p>
-</br >
     <p>Expected: May 2023</p>
     <p>GPA: 2.2/4.0</p>
 </div>
